--- a/Day2/BLL/BLL.csproj
+++ b/Day2/BLL/BLL.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Entities\UserBll.cs" />
     <Compile Include="Mappers\BllMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\INotifyingService.cs" />
+    <Compile Include="Services\INotifiedService.cs" />
     <Compile Include="Services\IService.cs" />
     <Compile Include="Services\MasterService.cs" />
     <Compile Include="Services\SlaveService.cs" />
