--- a/Day2/Configurator/ConfigurationLayer.csproj
+++ b/Day2/Configurator/ConfigurationLayer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BA6F2BBD-D816-48F0-ABCB-9E9F3736BFEA}</ProjectGuid>
+    <ProjectGuid>{EA78F4BE-6B92-436D-B154-605E436B0BD6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DAL</RootNamespace>
-    <AssemblyName>DAL</AssemblyName>
+    <RootNamespace>Configurator</RootNamespace>
+    <AssemblyName>Configurator</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,26 +40,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\IEntity.cs" />
-    <Compile Include="Entities\SavedEntity.cs" />
-    <Compile Include="Entities\UserEntity.cs" />
-    <Compile Include="Generator\IdGenerator.cs" />
-    <Compile Include="Generator\IGenerator.cs" />
-    <Compile Include="Generator\IGeneratorTracker.cs" />
+    <Compile Include="Configurator.cs" />
+    <Compile Include="configVlidators\IServiceCountValidator.cs" />
+    <Compile Include="configVlidators\ServiceCountValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\IFileRepository.cs" />
-    <Compile Include="Repositories\IRepository.cs" />
-    <Compile Include="Repositories\MemoryRepository.cs" />
-    <Compile Include="Repositories\XmlRepository.cs" />
-    <Compile Include="SearchCriterias\FirstNameCriteria.cs" />
-    <Compile Include="SearchCriterias\ISearchCriteria.cs" />
-    <Compile Include="SearchCriterias\LastNameCriteria.cs" />
-    <Compile Include="SearchCriterias\VisaCriteria.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BLL\BLL.csproj">
+      <Project>{dba36c51-fe41-4e55-9874-30b53d7eed2a}</Project>
+      <Name>BLL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CustomNumberGenerators\CustomNumberGenerators.csproj">
       <Project>{a7e17b53-35f6-4551-be96-db2f29f20875}</Project>
       <Name>CustomNumberGenerators</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{ba6f2bbd-d816-48f0-abcb-9e9f3736bfea}</Project>
+      <Name>DAL</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
