--- a/Day2/ConsoleApplication/App.config
+++ b/Day2/ConsoleApplication/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
-      <section name ="servicesConfig" type="ConsoleApplication.RegisterServicesConfig, ConsoleApplication" allowOverride="true"/>
+      <section name ="servicesConfig" type="ConsoleApplication.RegisterServicesConfig, ConsoleApplication" />
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
