--- a/Day2/DAL/DAL.csproj
+++ b/Day2/DAL/DAL.csproj
@@ -43,9 +43,9 @@
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Entities\SavedEntity.cs" />
     <Compile Include="Entities\UserEntity.cs" />
+    <Compile Include="Exceptions\XmlException.cs" />
     <Compile Include="Generator\IdGenerator.cs" />
     <Compile Include="Generator\IGenerator.cs" />
-    <Compile Include="Generator\IGeneratorTracker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IFileRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
