--- a/Day2/ConsoleApplication/App.config
+++ b/Day2/ConsoleApplication/App.config
@@ -6,4 +6,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <servicesConfig>
+    
+  </servicesConfig>
 </configuration>
