--- a/Day2/WcfClient/WcfClient.csproj
+++ b/Day2/WcfClient/WcfClient.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7D6786F7-1349-4615-98FE-5039F205F1EA}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{05F8D6ED-8C00-4774-896A-F7B7738D6670}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConfigurationLayer</RootNamespace>
-    <AssemblyName>ConfigurationLayer</AssemblyName>
+    <RootNamespace>WcfClient</RootNamespace>
+    <AssemblyName>WcfClient</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,14 +33,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.3.6\lib\net45\NLog.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,37 +46,56 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configurator.cs" />
-    <Compile Include="ConfiguredServices.cs" />
-    <Compile Include="CustomTags\ServiceConfig\RegisterServicesConfigSection.cs" />
-    <Compile Include="CustomTags\ServiceConfig\ServiceCollection.cs" />
-    <Compile Include="CustomTags\ServiceConfig\ServiceElement.cs" />
-    <Compile Include="DomainAssemblyLoader.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\UserStorageServ\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="NLog.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <None Include="ApplicationConfig.config" />
-    <None Include="NLog.xsd">
+    <None Include="App.config" />
+    <None Include="Service References\UserStorageServ\UserStorageService.wsdl" />
+    <None Include="Service References\UserStorageServ\UserStorageService.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="packages.config" />
+    <None Include="Service References\UserStorageServ\UserStorageService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\UserStorageServ\UserStorageService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\UserStorageServ\UserStorageService3.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\UserStorageServ\UserStorageService4.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\UserStorageServ\WcfClient.UserStorageServ.UserBll.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BLL\BLL.csproj">
-      <Project>{dba36c51-fe41-4e55-9874-30b53d7eed2a}</Project>
-      <Name>BLL</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CustomNumberGenerators\CustomNumberGenerators.csproj">
-      <Project>{a7e17b53-35f6-4551-be96-db2f29f20875}</Project>
-      <Name>CustomNumberGenerators</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DAL\DAL.csproj">
-      <Project>{BA6F2BBD-D816-48F0-ABCB-9E9F3736BFEA}</Project>
-      <Name>DAL</Name>
-    </ProjectReference>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\UserStorageServ\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\UserStorageServ\UserStorageService.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\UserStorageServ\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\UserStorageServ\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\UserStorageServ\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
