--- a/Day2/WcfClient/App.config
+++ b/Day2/WcfClient/App.config
@@ -10,7 +10,7 @@
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:56663/UserStorageService.svc"
+            <endpoint address="http://localhost:8733/Design_Time_Addresses/WcfService/UserStorageService/"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IUserStorageService"
                 contract="UserStorageServ.IUserStorageService" name="BasicHttpBinding_IUserStorageService" />
         </client>
