--- a/Day2/WcfServer/App.config
+++ b/Day2/WcfServer/App.config
@@ -1,6 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <configSections>
+    <section name="RegisterServices" type="ConfigurationLayer.CustomTags.ServiceConfig.RegisterServicesConfigSection, ConfigurationLayer"/>
+    <section name="RegisterFiles" type="ConfigurationLayer.CustomTags.FileConfig.RegisterFileConfigSection, ConfigurationLayer"/>
+    <section name="RegisterAddress" type="ConfigurationLayer.CustomTags.AddressConfig.RegisterAddressConfigSection, ConfigurationLayer"/>
+  </configSections>
+  <RegisterServices>
+    <Services>
+      <Service serviceType="master" count="1"/>
+      <Service serviceType="slave" count="2"/>
+    </Services>
+  </RegisterServices>
+  <RegisterAddresses>
+    <Addresses>
+      <address address="127.0.0.1" port="9000"></address>
+      <address address="127.0.0.1" port="9001"></address>
+      <address address="127.0.0.1" port="9002"></address>
+      <address address="127.0.0.1" port="9003"></address>
+    </Addresses>
+  </RegisterAddresses>
+  <RegisterFiles>
+    <Files>
+      <File fileName="state.xml"></File>
+    </Files>
+  </RegisterFiles>
+  
 </configuration>
