app config address collection fixed

--- a/Day2/WcfServer/App.config
+++ b/Day2/WcfServer/App.config
@@ -3,7 +3,7 @@
   <configSections>
     <section name="RegisterServices" type="ConfigurationLayer.CustomTags.ServiceConfig.RegisterServicesConfigSection, ConfigurationLayer"/>
     <section name="RegisterFiles" type="ConfigurationLayer.CustomTags.FileConfig.RegisterFileConfigSection, ConfigurationLayer"/>
-    <section name="RegisterAddress" type="ConfigurationLayer.CustomTags.AddressConfig.RegisterAddressConfigSection, ConfigurationLayer"/>
+    <section name="RegisterAddresses" type="ConfigurationLayer.CustomTags.AddressConfig.RegisterAddressConfigSection, ConfigurationLayer" allowLocation="true" allowDefinition="Everywhere"/>
   </configSections>
   <RegisterServices>
     <Services>
@@ -13,10 +13,10 @@
   </RegisterServices>
   <RegisterAddresses>
     <Addresses>
-      <address address="127.0.0.1" port="9000"></address>
-      <address address="127.0.0.1" port="9001"></address>
-      <address address="127.0.0.1" port="9002"></address>
-      <address address="127.0.0.1" port="9003"></address>
+      <Address port="9000" address="127.0.0.1"/>
+      <Address port="9001" address="127.0.0.1"/>
+      <Address port="9002" address="127.0.0.1"/>
+      <Address port="9003" address="127.0.0.1"/>
     </Addresses>
   </RegisterAddresses>
   <RegisterFiles>
