--- a/Day2/WcfServer/App.config
+++ b/Day2/WcfServer/App.config
@@ -8,7 +8,7 @@
   <RegisterServices>
     <Services>
       <Service serviceType="master" count="1"/>
-      <Service serviceType="slave" count="4"/>
+      <Service serviceType="slave" count="5"/>
     </Services>
   </RegisterServices>
   <RegisterAddresses>
@@ -17,6 +17,7 @@
       <Address port="8001" address="127.0.0.1"/>
       <Address port="8002" address="127.0.0.1"/>
       <Address port="8003" address="127.0.0.1"/>
+      <Address port="8004" address="127.0.0.1"/>
     </Addresses>
   </RegisterAddresses>
   <RegisterFiles>
